plugins {
    id("java")
    id("org.springframework.boot") version "4.0.2"
    id("io.spring.dependency-management") version "1.1.7"
    id("org.graalvm.buildtools.native") version "0.11.0"
    id("com.diffplug.spotless") version "8.1.0"
    id("org.openrewrite.rewrite") version("latest.release")
}

group = "vn.id.thongdanghoang.sep"
version = "1.0.1"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

rewrite() {
    // OpenRewrite Extension Configuration
    activeRecipe("org.openrewrite.java.spring.boot4.UpgradeSpringBoot_4_0")
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    rewrite("org.openrewrite.recipe:rewrite-spring:latest.release")

    implementation("org.springframework.boot:spring-boot-starter-actuator")
    implementation("org.springframework.boot:spring-boot-starter-oauth2-authorization-server")
    implementation("org.springframework.boot:spring-boot-starter-oauth2-client")
    implementation("org.springframework.boot:spring-boot-starter-security")
    implementation("org.springframework.boot:spring-boot-starter-web")
    implementation("org.springframework.boot:spring-boot-starter-validation")
    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
    implementation("org.flywaydb:flyway-core")
    implementation("org.flywaydb:flyway-database-postgresql")
    runtimeOnly("org.postgresql:postgresql")
    compileOnly("org.projectlombok:lombok")
    annotationProcessor("org.projectlombok:lombok")
    annotationProcessor("org.hibernate.orm:hibernate-jpamodelgen:7.2.1.Final")

    testImplementation("com.microsoft.playwright:playwright:1.57.0")
    testImplementation("org.springframework.boot:spring-boot-starter-test")
    testImplementation("org.springframework.security:spring-security-test")
    testRuntimeOnly("com.h2database:h2")
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

tasks.withType<Test> {
    useJUnitPlatform()
}

spotless {
    // optional: limit format enforcement to just the files changed by this feature branch
    ratchetFrom("origin/main")

    java {
        target("src/*/java/**/*.java")

        importOrderFile("../eclipse.importorder")

        removeUnusedImports()
        forbidWildcardImports()
        forbidModuleImports()

        eclipse("4.26")
            .configFile("../eclipse-format.xml")
            // Optional: Enable the Sort Members feature globally. (default: false)
            .sortMembersEnabled(true)
            // Optional: Specify the sort order of the member categories. (default: T,SF,SI,SM,F,I,C,M)
            //   SF,SI,SM,F,I,C,M,T = Static Fields, Static Initializers, Static Methods, Fields, Initializers, Constructors, Methods, (Nested) Types
            .sortMembersOrder("SF,SI,SM,F,I,C,M,T")
            // Optional: Enable the reordering of fields, enum constants, and initializers. (default: true)
            .sortMembersDoNotSortFields(false)
            // Optional: Enable reordering of members of the same category by the visibility within the category. (default: false)
            .sortMembersVisibilityOrderEnabled(true)
            // Optional: Specify the ordering of members of the same category by the visibility within the category. (default: B,V,R,D)
            //   B,R,D,V = Public, Protected, Package, Private
            .sortMembersVisibilityOrder("B,R,D,V")

        formatAnnotations()
    }
}
